--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.12.2
+  http: ^0.12.0+4
   number_inc_dec: ^0.8.0
   cool_alert: ^1.1.0
   carousel_slider: ^4.0.0
+  carousel_pro: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - img/icon.png
+    - img/img1.jpg
+    - img/img2.jpg
+    - img/img3.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
